--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
   - task: CmdLine@2
     displayName: 'Install emulator'
     inputs:
-      script: 'sudo apt-get install -y qemu qemu-user-static'
+      script: 'sudo apt-get install -y qemu-system qemu-user-static'
 
   - task: Docker@2
     displayName: 'Login'
