--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,15 +27,31 @@ jobs:
         containerRegistry: $(container_registry)
         command: 'login'
 
-    - task: Docker@2
-      displayName: 'Build'
+    # - task: Docker@2
+    #   displayName: 'Build'
+    #   inputs:
+    #     containerRegistry: $(container_registry)
+    #     repository: $(repository)
+    #     command: 'build'
+    #     arguments: '--platform linux/arm64'
+    #     Dockerfile: '**/src/Dockerfile'
+    #     tags: 'latest'
+
+    # - task: PowerShell@2
+    #   displayName: 'Set up Docker Buildx and QEMU'
+    #   inputs:
+    #     targetType: 'inline'
+    #     script: |
+    #       docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+    #       docker buildx create --name mybuilder --driver docker-container --use
+    #       docker buildx inspect --bootstrap
+
+    - task: PowerShell@2
+      displayName: 'Run buildx'
       inputs:
-        containerRegistry: $(container_registry)
-        repository: $(repository)
-        command: 'build'
-        arguments: '--platform linux/arm64'
-        Dockerfile: '**/src/Dockerfile'
-        tags: 'latest'
+        targetType: inline
+        script: |
+          docker buildx build --platform linux/amd64,linux/arm64 .
 
     - task: Docker@2
       displayName: 'Push'
