--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,9 +46,10 @@ jobs:
     #       docker buildx create --name mybuilder --driver docker-container --use
     #       docker buildx inspect --bootstrap
 
-    - task: PowerShell@2
+    - task: Bash@3
       displayName: 'Run buildx'
       inputs:
+        workingDirectory: '**/src'
         targetType: inline
         script: |
           docker buildx build --platform linux/amd64,linux/arm64 .
