--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ jobs:
     - task: Bash@3
       displayName: 'Run buildx'
       inputs:
-        workingDirectory: '**/src'
+        workingDirectory: './src'
         targetType: inline
         script: |
           docker buildx build --platform linux/amd64,linux/arm64 .
