Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ jobs:
         workingDirectory: './src'
         targetType: inline
         script: |
-          docker buildx build --platform linux/amd64,linux/arm64 .
+          docker buildx build --platform linux/arm64 .
 
     - task: Docker@2
       displayName: 'Push'
