--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ jobs:
         workingDirectory: './src'
         targetType: inline
         script: |
-          docker buildx build --platform linux/amd64,linux/arm64 .
+          docker buildx build --platform linux/amd64,linux/arm64 -t go2cloud.azurecr.io/internal/aznamingtool:latest --push .
 
     # - task: Bash@3
     #   displayName: 'Run buildx'
@@ -64,10 +64,10 @@ jobs:
     #     script: |
     #       docker buildx build --platform linux/arm64 .
 
-    - task: Docker@2
-      displayName: 'Push'
-      inputs:
-        containerRegistry: $(container_registry)
-        repository: $(repository)
-        command: 'push'
-        tags: 'latest'
+    # - task: Docker@2
+    #   displayName: 'Push'
+    #   inputs:
+    #     containerRegistry: $(container_registry)
+    #     repository: $(repository)
+    #     command: 'push'
+    #     tags: 'latest'
